--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="estilos.css">
 </head>
 <body class="fondoGeneral">
-     <header>
+     <header class="cabeza">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
@@ -42,27 +42,27 @@
         </div>  
         <div class="container">
             <div class="row m-3">
-              <div class="col">
+              <div class="col m-1">
                 <div class="card" style="width: 18rem;">
                     <img src="imagenes/tablas500.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Adquire our boards</p>
+                      <a class="nav-link card-text sinLink" href="secciones/proyectos.html">Adquire our boards</a>
                     </div>
                   </div>
               </div>
-              <div class="col">
+              <div class="col m-1">
                 <div class="card" style="width: 18rem;">
                     <img src="imagenes/reciclar500.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Learn about our recycling project</p>
+                        <a class="nav-link card-text sinLink" href="#">Recycling project</a>
                     </div>
                   </div>
               </div>
-              <div class="col">
+              <div class="col m-1">
                 <div class="card" style="width: 18rem;">
                     <img src="imagenes/clases500.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Surf lessons</p>
+                        <a class="nav-link card-text sinLink" href="#">Surf Lessons</a>
                     </div>
                   </div>
               </div>
@@ -70,8 +70,8 @@
           </div>
   
         
-        <footer class="container-fluid p-2 bottom-0 bg-dark text-light text-center">
-            <h6> Este sitio ha sido desarrollado con &copy Bootstrap</h6>
+        <footer class="container-fluid p-1 bottom-0 bg-dark text-light text-center">
+            <h6>&copy Surfstyle</h6>
         </footer>
             
 
